<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">OpenClothes</string>
    <string name="model_section">Model</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_find_model">Find model</string>
    <string name="title_activity_model">ModelActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">open</string>
    <string name="drawer_closed">close</string>

    <!-- Authorities -->
    <string name="content_authority">com.mx.kanjo.openclothes</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_toolbar_w">ToolbarW</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_activity_main_activity3">MainActivity3</string>

    <array name="menu_drawer_options">
        <item>Stock</item>
        <item>Products</item>
        <item>Sales</item>
        <!--item>Promise Sales</item-->
        <item>Configuration</item>
    </array>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Dialog new product -->
    <string name="title_new_product"><b>New Product</b></string>
    <string name="product_model">Model</string>
    <string name="product_price">Price</string>
    <string name="product_cost">Cost</string>
    <string name="product_description">Description</string>
    <string name="product_is_active">Active</string>
    <string name="title_activity_configuration">ConfigurationActivity</string>


    <!--Configuration Activity-->
    <string name="title_size">Size</string>
    <string name="title_income">Income Types</string>
    <string name="title_outcome">Outcome Types</string>
    <string name="title_configurations">Configurations</string>

    <!--Titles for dialogs that has only two actions add or discard-->
    <string name="discard_action_title">Discard</string>
    <string name="add_action_title">Add</string>
    <string name="remove_action_title">Remove</string>

    <!--Dialog add size-->
    <string name="title_add_new_size">Add Size</string>
    <string name="title_update_size">Update Size</string>
    <string name="hint_size">Size</string>


    <!--Dialog Income Type-->
    <string name="title_add_income_type">Add Income Type</string>
    <string name="title_update_income_type">Update income type</string>
    <string name="hint_income_type">Income type</string>

    <!--Dialog Outcome Type-->
    <string name="title_add_outcome_type">Add Outcome Type</string>
    <string name="title_update_outcome_type">Update Outcome Type</string>
    <string name="hint_outcome_type">Income type</string>
    <string name="title_section_configuration">Configuration</string>

    <string name="title_tool_bar_config_activity">Configuration</string>

    <!--Menu configuration Activity-->
    <string name="menu_add_size_title">Add size</string>
    <string name="menu_add_income_type_item">Add income type</string>
    <string name="menu_add_outcome_type_item">Add outcome type</string>
    <string name="empty_configuration_list">Currently there is no items</string>
    <string name="title_list_configuration_size_items">Size items</string>
    <string name="title_list_configuration_income_type_items">Income Type items</string>
    <string name="title_list_configuration_outcome_type_items">Outcome Type items</string>
    <string name="title_activity_product">Product</string>

    <!--Product Fragment -->
    <string name="message_pick_image">Pick the image</string>
    <string name="validation_cost_product">Cost is required</string>
    <string name="validation_model_product">Model is required</string>
    <string name="validation_price_product">Price is required</string>
    <string name="validation_model_duplicated">This model is already in use.</string>


    <!--Dialog add stock item-->
    <string name="title_add_dialog_stock">Add Stock Item</string>
    <string name="hint_quantity_stock">Quantity</string>
    <string name="choose_title">Choose :</string>
    <string name="message_quantity_validation">Please enter a valid quantity</string>
    <string name="new_stock_item_title_type_income_operation">Type income operation :</string>
    <string name="new_stock_item_title_model">Model :</string>
    <string name="new_stock_item_title_size">Size :</string>
    <string name="new_stock_item_title_quantity">Quantity:</string>

    <!--Menu stock list actions-->
    <string name="title_income_stock">Income</string>
    <string name="title_outgoing_stock">Remove</string>
    <string name="menu_add_product_title">Add</string>

    <!--Dialog remove stock item-->
    <string name="title_remove_dialog_stock">Remove Stock Item</string>
    <string name="title_activity_new_sale">NewSaleActivity</string>
    <string name="remove_stock_item_title_type_outcome_operation">Outcome operation :</string>

    <!--Dialog add sale item-->
    <string name="title_add_dialog_new_sale">New sale item</string>

    <!--New Sale activity-->
    <string name="title_add_new_sale">Add new sale</string>
    <string name="title_fragment_stock">My stock </string>
    <string name="title_fragment_products">My products</string>
    <string name="title_sales_fragment">My sales</string>
    <string name="update_action">Update</string>
    <string name="error_quantity_greater_than_inventory">Current pieces (%1$d) in inventory .</string>
    <string name="title_activity_show_sale">Sale</string>


    <!--SaleActivity-->
    <string name ="title_sale_activity">Sale</string>
    <string name="title_activity_stock">Stock</string>
    <string name="title_activity_delete">deleteActivity</string>
    
    <!--Searchable-->
    <string name="search_label">Search</string>
    <string name="search_hint">Please </string>

</resources>
