<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="96dp"
        android:gravity="center"
        android:background="@color/primary">

        <TextView
            android:id="@+id/title_fragment_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_add_income_type"
            android:textColor="@color/text_color"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="48dp"
        >

        <EditText
            android:id="@+id/et_income_type"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_income_type"
            android:inputType="textShortMessage"
            android:singleLine="true"/>
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="4dip"
        android:layout_marginRight="4dip"
        android:background="?android:attr/dividerHorizontal"
        android:layout_alignParentTop="true"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="center_vertical|right">




        <Button
            android:id="@+id/btn_add_income_type"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="@string/add_action_title"
            android:background="?android:attr/selectableItemBackground"
            android:minWidth="@dimen/button_min_width"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:textColor="@color/primary"/>

        <Button
            android:id="@+id/btn_discard_income_type"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="@string/discard_action_title"
            android:background="?android:attr/selectableItemBackground"
            android:minWidth="@dimen/button_min_width"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:textColor="@color/secondary_text"

            />


    </LinearLayout>

</LinearLayout>