<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="96dp"
        android:gravity="center"
        android:background="@color/primary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_add_dialog_new_sale"
            android:textColor="@color/text_color"/>
    </LinearLayout>




    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="148dp"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp">


            <Spinner
                style="@style/Widget.IOSched.HeaderBar.Spinner"
                android:id="@+id/spin_model"
                android:layout_width="168dp"
                android:layout_height="74dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"/>

            <Spinner
                style="@style/Widget.IOSched.HeaderBar.Spinner"
                android:id="@+id/spin_size"
                android:layout_width="168dp"
                android:layout_height="74dp"
                android:layout_toRightOf="@+id/spin_model"
                android:layout_alignParentBottom="true"

                />

            <EditText
                android:id="@+id/et_quantity"
                android:layout_width="168dp"
                android:layout_height="74dp"
                android:hint="@string/hint_quantity_stock"
                android:gravity="center_vertical"
                android:inputType="numberDecimal"
                android:layout_toRightOf="@+id/spin_size"
                android:layout_alignParentBottom="true"

                />

            <TextSwitcher
                android:id="@+id/text_view_price"
                android:layout_width="168dp"
                android:layout_height="74dp"
                android:gravity="center"
                android:inputType="numberDecimal"
                tools:text="$200"
                android:textColor="@color/secondary_text"
                android:textStyle="bold"
                android:text="$0.00"
                android:layout_toRightOf="@+id/et_quantity"
                android:layout_alignParentBottom="true"
                />

            <TextSwitcher
                android:id="@+id/text_total_line"
                android:layout_width="168dp"
                android:layout_height="74dp"
                android:gravity="center"
                android:inputType="numberDecimal"
                tools:text="$200"
                android:textColor="@color/secondary_text"
                android:textStyle="bold"
                android:text="$0.00"
                android:layout_toRightOf="@+id/text_view_price"
                android:layout_alignParentBottom="true"
                />


            <TextView
                android:id="@+id/title_total"
                android:layout_width="216dp"
                android:layout_height="74dp"
                android:text="Total"
                android:layout_alignParentRight="true"
                android:gravity="center"
                />


            <TextView
                android:layout_width="216dp"
                android:layout_height="74dp"
                android:text="Price"
                android:layout_toLeftOf="@+id/title_total"
                android:gravity="center"
                />

        </RelativeLayout>



    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="4dip"
        android:layout_marginRight="4dip"
        android:background="?android:attr/dividerHorizontal"
        android:layout_alignParentTop="true"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="center_vertical|right">




        <Button
            android:id="@+id/btn_add_new_sale_item"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="@string/add_action_title"
            android:background="?android:attr/selectableItemBackground"
            android:minWidth="@dimen/button_min_width"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:textColor="@color/primary"/>

        <Button
            android:id="@+id/btn_discard_stock_item"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="@string/discard_action_title"
            android:background="?android:attr/selectableItemBackground"
            android:minWidth="@dimen/button_min_width"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:textColor="@color/secondary_text"

            />


    </LinearLayout>

</LinearLayout>