<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="96dp"
        android:background="@color/primary"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:text="@string/title_new_product"
            android:layout_gravity="center"
            android:gravity="center"
            />

    </LinearLayout>



    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">


        <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp"
                android:layout_margin="12dp"
                android:gravity="center">


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">

                    <ImageButton
                    android:id="@+id/img_new_product"
                    android:layout_width="192dp"
                    android:layout_height="192dp"
                    android:contentDescription="Pick an image"
                    android:layout_gravity="center"
                    android:layout_margin="24dp"/>

                <EditText
                    android:id="@+id/edit_product_model"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="Model"
                    android:layout_margin="12dp"
                    android:layout_gravity="center"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    />

                <EditText
                    android:id="@+id/edit_product_cost"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="Cost"
                    android:layout_margin="12dp"
                    android:layout_gravity="center"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    />

                <EditText
                    android:id="@+id/edit_product_price"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="Price"
                    android:layout_margin="12dp"
                    android:layout_gravity="center"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    />

                <EditText
                    android:id="@+id/edit_product_description"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="Description"
                    android:layout_margin="12dp"
                    android:layout_gravity="center"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="12dp"
                android:paddingRight="12dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_is_active"
                        android:padding="12dp"
                        android:textColor="@color/secondary_text"

                        />
                    <CheckBox
                        android:id="@+id/check_product_active"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="4dip"
        android:layout_marginRight="4dip"
        android:background="?android:attr/dividerHorizontal"
        android:layout_alignParentTop="true"/>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="center_vertical|right">




        <Button
            android:id="@+id/btn_add_size"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="@string/add_action_title"
            android:background="?android:attr/selectableItemBackground"
            android:minWidth="@dimen/button_min_width"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:textColor="@color/primary"/>

        <Button
            android:id="@+id/btn_discard_size"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="@string/discard_action_title"
            android:background="?android:attr/selectableItemBackground"
            android:minWidth="@dimen/button_min_width"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:textColor="@color/secondary_text"

            />

    </LinearLayout>


    </LinearLayout>
    </ScrollView>
</LinearLayout>

